[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/close-eye.png" type="Texture" id=1]
[ext_resource path="res://fonts/RobotoCondensed-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/layer.gd" type="Script" id=3]
[ext_resource path="res://textures/eye.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.435294, 0.211765, 0.505882, 0.109804 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.556863, 0.145098, 0.894118, 0.635294 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 3

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[node name="layer_PanelContainer" type="PanelContainer"]
margin_right = 131.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
border_colour_hilight = Color( 0.815686, 0.627451, 0.964706, 0.87451 )
border_colour_selected = Color( 0.658824, 0.584314, 1, 1 )
background_colour_hilight = Color( 0.537255, 0.298039, 0.611765, 0.376471 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 22.0
mouse_filter = 1
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 19.0

[node name="layerName_Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 29.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Layer"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 106.0
margin_bottom = 17.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generator_Label" type="Label" parent="MarginContainer/HBoxContainer"]
visible = false
modulate = Color( 0.411765, 0.92549, 0.337255, 1 )
margin_left = 98.0
margin_right = 106.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "g"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 125.0
margin_bottom = 17.0

[node name="layerVisibility_TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
rect_pivot_offset = Vector2( 7.5, 7.5 )
size_flags_horizontal = 9
size_flags_vertical = 9
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 4
[connection signal="mouse_entered" from="." to="." method="_on_layer_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_layer_PanelContainer_mouse_exited"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/CenterContainer/layerVisibility_TextureButton" to="." method="_on_layerVisibility_TextureButton_toggled"]
